---
version: trunk
todo: 
  - yacpdb communication: check, add, sync down, sync up
  - icons on model dialogs
  - Clear Board -> Clear popeye output (why?..)
  - Memleaks in options dialog?
  - emit LangChanged on startup before paint and remove double entries of language-specific constants (in constructors)
  - More default glyphs in GC, + 45 rotations?
---
version: 0.13.1
changes:
  - Friendly tab captions for fairy conditions
  - Quick options toolbar
  - Invert colors button
  - Serbian language interface
  - Popeye input area is editable (like in Fancy editing doesn't affect the model)
  - List possible moves commands (a must for examining complex fairies)
  - Rich text view
  - bug fixed: options -> "Intelligent 0" -> run Popeye: popeye error
  - bug fixed: add twin -> remove twin -> run popeye -> compactify: unhandled exception
  - bug fixed: exit -> save? -> cancel: exits (should not)
  - bug fixed: file -> open -> success: problem list is rebuilt twice for no reason
  - windows build: PyQt 2.7-4.9-1 --> 2.7-4.9.6-1 [latest version for Jan 2013]  - perhaps fixes memleaks?
---
version: 0.12.2.4b
changes:
  - file -> save template
  - different notations in compactify
  - selection handling
  - import pbm: ask encoding
  - bug fixed: non-ascii filenames
  - bug fixed: paste xfen
  - Import: .cvv
---
version: 0.12.2.3b
changes:
  - icon issues for Windows 7
  - Diagram borders in PDF
  - bug fixed: legacy.chess.Move.disambuguate() was never called in certain cases
    resulting in incorrect compact output
---
version: 0.12.2.2b
changes:
  - about screen changed
  - alternating backgrounds in overview
  - exit handler (unsaved changes, windows geometry etc)
  - Twins dialog context menu changed
  - PDF export
  - Clearing popeye output on model index change
  - Confirm entry deletion
  - Export to image
  - Compactifying popeye output + lots of bugs fixed in legacy (yacpdb) code